# hermes-trading

./: .env  .gitignore  .railwayignore  Dockerfile  analyze_perf.py  audit.py  audit_self_learning.py  backup_state.py  check_state.py  check_state_payload.py  debug_audit.py  local_state.json  monitor.sh  phase3_hermes_test.py  phase5_validation.py  phase7_final_audit.py  phase_self_learning.py  pyproject.toml  test_hermes_reflect.py  verify_rich_reflection.py
defaults/: goal.yaml  hypotheses.jsonl  strategy.yaml
defaults/history/: v0005.yaml  v0006.yaml  v0007.yaml  v0008.yaml
hermes_config/: config.yaml
hermes_trading/: __init__.py  bootstrap.py  exit_intelligence.py  exit_intelligence_store.py  loop.py  reflect.py  run.py  score.py
hermes_trading/adapters/: __init__.py  alpaca_broker.py  macro.py  news.py  onchain.py  price.py
state/: goal.yaml  hermes_check.json  hypotheses.jsonl  self_learning_proof.json  strategy.yaml
state/history/: 01.yaml  v0002.yaml
