[project]
name = "hermes-trading"
version = "0.7.3"

description = "Self-improving trading agent — Hermes brain, Railway worker"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "yfinance>=0.2.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
]

[project.scripts]
hermes-trading = "hermes_trading.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_trading"]
